tests/ui/associated-types/issue-19883.stderr
error[E0576]: cannot find associated type `Dst` in trait `From`
  --> $DIR/issue-19883.rs:9:30
   |
LL |     type Output;
   |     ------------ associated type `Output` defined here
...
LL |         <Dst as From<Self>>::Dst
   |                              ^^^
   |                              |
   |                              not found in `From`
   |                              help: maybe you meant this associated type: `Output`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0576`.
